@@ -37,7 +37,7 @@ Image *Hud::im_hullstr_rightbar = NULL;
 Image *Hud::im_hullstr_bar = NULL;
 Image *Hud::im_shieldstat = NULL;
 Image *Hud::im_radarnav = NULL;
-int Radar::visibility = 1000;
+int Radar::visibility = 7000;
 
 AlertMessage::AlertMessage( string message, Uint32 length )
 {
@@ -179,11 +179,7 @@ void Radar::Draw( SpriteManager *sprites ) {
 			radarSize = int((sprite->GetRadarSize() / float(visibility)) * (RADAR_HEIGHT/4.0));
 			
 			
-			Video::DrawCircle(
-				blip,
-				(radarSize>=1) ?radarSize: 1,
-				1,
-				sprite->GetRadarColor() );
+			Video::DrawCircle( blip, (radarSize >= 1) ? radarSize : 1, 1, sprite->GetRadarColor() );
 		}
 	}
 }
