@@ -20,13 +20,16 @@ Ship::Ship() {
 	
 	/* Initalize ship's condition */
 	status.hullEnergyAbsorbed = 0;
-	SetRadarColor(Color::Get(255,0,0));
-	SetAngle( float( rand() %360 ) );
 	projectileAmmo = 10;
 	fireDelay = 0;
-	/*Debug: Add all weapons to this ships weapons list, later we will only basic and when they are purchasedhi*/
+	
+	SetRadarColor( Color::Get( 0, 255, 0 ) );
+	SetAngle( float( rand() % 360 ) );
+	
+	/* Debug: Add all weapons to this ships weapons list, later we will only basic and when they are purchasedhi */
 	Weapons* weapons = Weapons::Instance();
-	//need to copy weapons instead of modifying originals, this is temp
+	
+	// need to copy weapons instead of modifying originals, this is temp
 	for( list<Weapon *>::iterator i = weapons->weapons.begin(); i != weapons->weapons.end(); ++i ) {
 		shipWeapons.push_back(*i);
 		(*i)->setAmmo(1000);
@@ -117,8 +120,8 @@ void Ship::Update( void ) {
 		flareAnimation->Reset();
 	}
 
-	// Shiw the hits taken as part of the radar color
-	SetRadarColor(Color::Get(int(255 *getHullIntegrityPct()),0 ,0));
+	// Show the hits taken as part of the radar color THIS SHOULD BE AN UPGRADE
+	//SetRadarColor(Color::Get(int(255 *getHullIntegrityPct()),0 ,0));
 	
 	// Ship has taken as much damage as possible...
 	// It Explodes!
