@@ -1,3 +1,7 @@
+Friday, December 25, 2009
+	Chris Thielen:
+		* Fixed Image::Resize()
+
 Sunday, November 22, 2009
 	Matt Zweig:
 		* Added Ship damage and removal.
